Bug Fixes
Elements not appearing upon opening.
Email overlay not showing up.
Navbar adjust.

--- a/src/Components/Overlay/overlay.css
+++ b/src/Components/Overlay/overlay.css
@@ -28,7 +28,7 @@
 
 #overlay .email-link{
     position: fixed;
-    right: -201px;
+    right: -188px;
     bottom: 270px;
     z-index: 1000;
     display: flex;
@@ -42,7 +42,6 @@
 
 
 #overlay .email-link p{
-    font-size: 13px;
     color: #2D336B;
     font-weight: 600;
     transition: 0.3s;
@@ -51,7 +50,7 @@
 #overlay .email-link p:hover{
     cursor: pointer;
     transform: translateX(-4px);
-    filter: drop-shadow(0 0 0.1rem black);
+    filter: drop-shadow(0 0 0.2rem black);
 }
 
 .vertical-line1{
